--- a/test/test.html
+++ b/test/test.html
@@ -5,26 +5,37 @@
     <body>
         <!-- Begin MailChimp Signup Form -->
         <div id="mc_embed_signup">
-            <form method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            Form 1
+            <form method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate subscribe" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
 
-            <div class="mc-field-group">
-                <label for="mce-EMAIL">Email Address </label>
-                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-            </div>
+                <div class="mc-field-group">
+                    <label for="mce-EMAIL">Email Address </label>
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                </div>
                 <div id="mce-responses" class="clear">
                     <div class="response" id="mce-error-response" style="display:none"></div>
                     <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                </div>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;"><input type="text" name="b_88179bccb52af04eb42b11da2_0316d82e30" tabindex="-1" value=""></div>
                 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                 </div>
             </form>
         </div>
-
         <!--End mc_embed_signup-->
+        <hr>
+        <div>
+            Form 2
+            <form class="subscribe-2">
+                <input type="email" value="" name="EMAIL" class="required email">
+                <div class="response" id="email-response" style="display:none"></div>
+            </form>
+        </div>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="../src/jquery.ajaxchimp.js"></script>
+        <script src="../src/jquery.ajaxchimp.langs.js"></script>
         <script src="creds.js"></script>
         <script src="test.js"></script>
     </body>
