--- a/test/test.html
+++ b/test/test.html
@@ -28,7 +28,7 @@
         <div>
             Form 2
             <form class="subscribe-2">
-                <input type="email" value="" name="EMAIL" class="required email">
+                <input type="email">
                 <div class="response" id="email-response" style="display:none"></div>
             </form>
         </div>
